# Django-App-Agentic-Legal-Information-Retrieval

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
config/: config.yaml  logging.yaml
scripts/: run_evaluation_report.py  run_pipeline.py  test_production_chunker.py  test_rag_orchestrator.py
src/agentic/: __init__.py
src/agentic/chunkings/: chunking.py  production_chunker.py
src/agentic/data_loader/: __init__.py  data_loader.py
src/agentic/entity/: config_entity.py
src/agentic/evaluation/: __init__.py  evaluation_report.py  evaluator.py
src/agentic/exception/: __init__.py
src/agentic/logger/: __init__.py  logging.py
src/agentic/models/: expansion_query.py
src/agentic/pipeline/: rag_orchestrator.py  rag_pipeline.py
src/agentic/retriever/: BM25_retriever.py  create_index.py  faiss_retriever.py  hybrid_retriever.py  reranker.py  retriever_with_regex.py
src/agentic/utils/: config_yaml.py
web/config/: __init__.py  celery.py  settings.py  urls.py
web/rag_web/: apps.py  models.py  tasks.py  urls.py  views.py
web/rag_web/migrations/: 0001_initial.py  0002_rename_hybrid_tor_k_queryrun_hybrid_top_k_and_more.py  0003_alter_queryrun_task_id.py
web/rag_web/services/: rag_service.py
web/rag_web/templates/rag_web/: base.html  evaluation.html  history.html  index.html  results.html  status.html
web/theme/static_src/: package-lock.json
