[project]
name = "agentic"
version = "0.1.0"
description = "Django App Agentic Retrieval Competition - Swiss Legal Citation Retrieval"
readme = "README.md"
license = {text = "MIT-2.0"}
requires-python = ">=3.10"
dependencies = [
    "django",
    "rank-bm25",
    "pandas",
    "numpy",
    "transformers",
    "torch",
    "accelerate",
    "faiss-cpu",
    "sentence-transformers",
    "PyYAML",
    "python-json-logger",
    "ipykernel",
    "huggingface-hub",
]
authors = [
    {name = "JotiRoy01", email = "jotiroygit@gmail.com"}
]
keywords = ["legal-nlp", "retrieval", "swiss-law", "kaggle-competition"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
strict = false

[project.urls]
project = "https://github.com/JotiRoy01/Django-App-Agentic-Legal-Information-Retrieval"